# lora-tracker

./: .gitignore  CHANGELOG.md  FILE_TREE.txt  LICENSE_NOT_SELECTED.md  README.md  RELEASE_MANIFEST.md  ROADMAP.md  SECURITY.md  SHA256SUMS  TEST_REPORT.md  VERSION  equine-tracker-v2.code-workspace  lora-tracker.code-workspace  walkthrough.md
.github/workflows/: ci.yml  release.yml
components/archiver/: .env.example  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
components/archiver/equine_archiver/: __init__.py  __main__.py  config.py  protocol.py  service.py  simulator.py  store.py
components/archiver/lora_tracker_archiver/: __init__.py  __main__.py  config.py  maintenance.py  protocol.py  service.py  simulator.py  store.py
components/archiver/tests/: test_config.py  test_maintenance.py  test_protocol.py  test_simulator.py  test_store.py
components/firmware-core/: README.md  library.json
components/firmware-simulator/: README.md  firmware_contract_test.cpp
components/gateway-firmware/: README.md  equine_config.h  equine_config_api.h  equine_crypto.h  equine_gateway_mqtt_v6.ino  equine_mqtt_api.h  equine_protocol.h  equine_relay.h  platformio.ini  secrets.example.h
components/repeater-firmware/: README.md  equine_protocol.h  equine_relay.h  platformio.ini  (+2 more)
docs/: ARCHITECTURE.md  BUILD_AND_DEPLOY.md  COMPATIBILITY.md  CONFIGURATION_REFERENCE.md  FLASHING.md  HARDWARE.md  ONBOARDING.md  OPERATIONS.md  PRODUCTION_READINESS.md  RADIO_COMPLIANCE_DE.md  REPEATERS.md  SIMULATION_COVERAGE.md
history/: README.md
tools/: package_firmware.py
(+89 files in other folders)
