[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "equine-archiver"
version = "0.2.0"
description = "MQTT/SQLite history archiver for Equine Tracker"
requires-python = ">=3.11"
dependencies = ["paho-mqtt>=2.1,<3"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
equine-archiver = "equine_archiver.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["equine_archiver*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
